--- a/front/public/index.html
+++ b/front/public/index.html
@@ -9,7 +9,7 @@
   <title>Funkwhale</title>
 </head>
 
-<body class="theme-dark">
+<body class="theme-light" id="body">
   <noscript>
     <strong>We're sorry but Funkwhale doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
