--- a/front/public/index.html
+++ b/front/public/index.html
@@ -23,6 +23,9 @@
       height: 100vh;
       background-color: #2D2F33;
     }
+    #fake-sidebar.loaded,  #fake-content.loaded {
+      display: none;
+    }
     #orange-square {
       width: 56px;
       height: 56px;
@@ -35,6 +38,13 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+    }
+    #fake-content h1 {
+      margin-bottom: 2em;
+    }
+    #fake-content .placeholder {
+      width: 20em;
+      max-width: 95%;
     }
     @media only screen and (max-width: 768px) {
       #fake-app {
@@ -49,19 +59,32 @@
 </head>
 
 <body class="theme-light" id="body">
-  <div id="app">
-    <div id="fake-app">
-      <div id="fake-sidebar">
-        <div id="orange-square"></div>
-      </div>
-      <div id="fake-content">
-        <noscript>
-          <strong>We're sorry but Funkwhale doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-        </noscript>
-        <h1>Loading Funkwhale…</h1>
-        <p>Please wait</p>
+  <div id="fake-app">
+    <div id="fake-sidebar">
+      <div id="orange-square"></div>
+    </div>
+    <div id="fake-content">
+      <noscript>
+        <strong>We're sorry but Funkwhale doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      </noscript>
+      <h1>Loading Funkwhale…</h1>
+      <div class="ui placeholder">
+        <div class="image header">
+          <div class="full line"></div>
+          <div class="line"></div>
+        </div>
+        <div class="image header">
+          <div class="line"></div>
+          <div class="full line"></div>
+        </div>
+        <div class="image header">
+          <div class="medium line"></div>
+          <div class="full line"></div>
+        </div>
       </div>
     </div>
+  </div>
+  <div id="app">
   </div>
   <!-- built files will be auto injected -->
 </body>
