Fix(front): Set correct PWA color theme.

--- a/front/index.html
+++ b/front/index.html
@@ -16,7 +16,7 @@
   <meta name="apple-mobile-web-app-title" content="Funkwhale">
   <meta name="application-name" content="Funkwhale">
   <meta name="msapplication-TileColor" content="#009fe3">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#f2711c">
   <style>
     #fake-app {
       width: 100vw;
